Fix for category buttons horizontal alignment

--- a/Angular/front-end/src/app/core/category/category.component.scss
+++ b/Angular/front-end/src/app/core/category/category.component.scss
@@ -25,6 +25,8 @@ main {
     & > .product-name {
       font-size: .845rem;
       font-weight: 700;
+      max-width: 180px;
+      min-height: 45px;
     }
 
     & > .product-price {
